[package]
name = "backend"
version = "0.1.0"
authors = ["Abdul Rachman <abdulrachman.mails@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
dotenv = "0.15.0"
env_logger = "0.8.3"
diesel = { version = "1.4.4", features = ["postgres"] }
